adding more of the wording for the coding workflow.

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,6 +2,23 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "9e202e48",
+   "metadata": {},
+   "source": [
+    "The Data Format "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06829fd1",
+   "metadata": {},
+   "source": [
+    "The image files are .czi files, meaning they are taken on a Zeiss microscope. czi files can range from 8 -32 bit images. There are various packages to read czi files. Today we will use AICSImage , but there is also czifile. Both of these can make a czi image into a numpy array. \n",
+    "Do note that AICSImage, may not be able to make a numpy array directly from a 16 or 32 bit image."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e91dce54-f69d-46ca-8046-d349df70adf2",
    "metadata": {},
    "source": [
@@ -132,17 +149,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Standard imports \n",
     "import matplotlib.pyplot as plt \n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from statistics import mean\n",
-    "from pathlib import Path\n",
-    "# import os \n",
-    "import czifile \n",
-    "from skimage import filters\n",
-    "from scipy.stats import f_oneway\n",
-    "from aicsimageio import AICSImage\n",
     "import pycurl\n",
+    "\n",
+    "#New imports \n",
+    "#Path will help us iterate through folders and files\n",
+    "from pathlib import Path\n",
+    "\n",
+    "#These will help read the images and make them into numpy arrays\n",
+    "import czifile \n",
+    "from aicsimageio import AICSImage\n",
+    "\n",
+    "# filters will allow us to determine threshold values\n",
+    "from skimage import filters\n",
+    "\n",
+    "#Standard statistics imports \n",
+    "from scipy.stats import f_oneway\n",
+    "from statistics import mean\n",
+    "\n",
     "\n",
     "# This is a special \"magic\" command that can be used in Jupyter Notebooks.\n",
     "# It ensures that Matplotlib shows the plot below each cell (you won't see\n",
@@ -200,6 +227,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4208e74b",
+   "metadata": {},
+   "source": [
+    "Now we will be having to do this for so many images. So it will be worth it to make this into a function.\n",
+    "Let's make this into a function then."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6b4a511",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_max_proj(path):\n",
+    "    '''\n",
+    "    Description:\n",
+    "    This will create a max projection image using a 3 dimensional numpy array.\n",
+    "    Will find the max value of all z stacks making a 2 dimensional numpy array.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    path (str): takes the image path in string format\n",
+    "\n",
+    "    Returns: \n",
+    "    2D numpy array\n",
+    "    '''\n",
+    "    #path = z.absolute()\n",
+    "    #path = file.as_posix()\n",
+    "    czi_img = AICSImage(path)\n",
+    "    czi_array = czi_img.data\n",
+    "    czi_array = czi_array[0,0,:,:,:,]\n",
+    "    maxz = czi_array.max(axis = 0)\n",
+    "    return maxz"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "207830ce",
@@ -236,22 +300,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ef9d60b5",
+   "metadata": {},
+   "source": [
+    "Thresholding using OTSU method, is a value which was automatically generated based on the values from the max projection.\n",
+    "This takes the histogram and determines the spot where the two peaks are seperated enough. \n",
+    "This area within the histogram is the difference between the background fluorescent values and the true fluorescent signals.\n",
+    "Creating a binary mask will allow us to say that anything in the image above the threshold value is fluorescence we want. However, this is a binary mask using '>' , '<' indicators the return is an array of boolean values (True or False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef9d60b5",
+   "id": "f646df8d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Thresh is a value which was automatically generated based on the values from the max projection.\n",
-    "\n",
     "thresh = filters.threshold_otsu(maximg)\n",
-    "\n",
-    "#Here we are saying that anything in the image above the threshold value is fluorescence we want\n",
-    "#However this is a binary mask meaning we get boolean values \n",
-    "\n",
-    "binary_mask = maximg >= thresh\n",
-    "\n",
-    "#Now if we want to see what we end up after applying this threshold method we can plot it using \n",
+    "binary_mask = maximg >= thresh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07f28975",
+   "metadata": {},
+   "source": [
+    "Now if we want to see what we end up after applying this threshold method we can plot it using "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bba28d52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "fig, ax = plt.subplots()\n",
     "plt.imshow(binary_mask, cmap='gray')\n",
@@ -263,9 +347,18 @@
    "id": "c1162d59",
    "metadata": {},
    "source": [
-    "Now we wanna do this presumably for multiple images and when imaging there are often 10s of images per variable and sometimes multiple variables. So how can you make the computer do it for you with little work on your end?\n",
+    "Again we will want do this for multiple images. \n",
+    "So how can you make the computer do it for you with little work on your end?\n",
     "\n",
-    "we first need to go through the folder, read the files, make them into numpy arrays and then store these values to be able to access them later"
+    "Let's make another function to get calculate the threshold for images."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "124cf2df",
+   "metadata": {},
+   "source": [
+    "Calculating the threshold automatically using OTSU thresholding "
    ]
   },
   {
@@ -276,6 +369,17 @@
    "outputs": [],
    "source": [
     "def calculate_threshold(path):\n",
+    "    '''\n",
+    "    Description:\n",
+    "    Calculate the threshold value using otsu threshold using filters from skimage.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    path (str): takes the image path in string format\n",
+    "\n",
+    "    Returns: \n",
+    "    int\n",
+    "    \n",
+    "    '''\n",
     "    czi_img = AICSImage(path)\n",
     "    czi_array = czi_img.data\n",
     "    czi_array = czi_array[0,0,:,:,:,]\n",
@@ -321,6 +425,20 @@
     "maxz = czi_array.max(axis = 0)\n",
     "\n",
     "def calculate_metrics(maximg ,thresh):\n",
+    "   '''\n",
+    "   Description:\n",
+    "   Calculates the mean intensity of the positive voxels from the binary mask.\n",
+    "   Calculates the percent of True values of the entire image, by counting the sum of the True values from the binary mask \\\n",
+    "      and dividing it by the area of the entire image.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    maximg: the max projection image in numpy array format\n",
+    "    thresh: the threshold value to be applied for the binary mask\n",
+    "\n",
+    "    Returns: \n",
+    "    list: returns a list of the Mean Value and the Percent Area\n",
+    "   \n",
+    "   '''\n",
     "   height = maximg.shape[0]\n",
     "   width = maximg.shape[1]\n",
     "   area = height * width \n",
@@ -338,23 +456,6 @@
     "\n",
     "calc = calculate_metrics(maxz, 19) \n",
     "print(calc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e6b4a511",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_max_proj(path):\n",
-    "    #path = z.absolute()\n",
-    "    #path = file.as_posix()\n",
-    "    czi_img = AICSImage(path)\n",
-    "    czi_array = czi_img.data\n",
-    "    czi_array = czi_array[0,0,:,:,:,]\n",
-    "    maxz = czi_array.max(axis = 0)\n",
-    "    return maxz"
    ]
   },
   {
@@ -395,6 +496,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8ba4d27d",
+   "metadata": {},
+   "source": [
+    "Looping through all of the files now"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "600ef1cf-9a36-47c9-b00b-d780ef6e599f",
@@ -410,9 +519,7 @@
     "    max = get_max_proj(r)\n",
     "    values = calculate_metrics(max,19) \n",
     "    res_dict= {'Filename':filename, 'Mean Value': values[0], 'Percent Area': values[1]}\n",
-    "    df= df.append(res_dict, ignore_index=True)\n",
-    "    \n",
-    "    "
+    "    df= df.append(res_dict, ignore_index=True)"
    ]
   },
   {
