more writing of the notebook

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -158,6 +158,7 @@
     "#New imports \n",
     "#Path will help us iterate through folders and files\n",
     "from pathlib import Path\n",
+    "import itertools \n",
     "\n",
     "#These will help read the images and make them into numpy arrays\n",
     "import czifile \n",
@@ -256,10 +257,9 @@
     "    '''\n",
     "    #path = z.absolute()\n",
     "    #path = file.as_posix()\n",
-    "    czi_img = AICSImage(path)\n",
-    "    czi_array = czi_img.data\n",
-    "    czi_array = czi_array[0,0,:,:,:,]\n",
-    "    maxz = czi_array.max(axis = 0)\n",
+    "    czi_img = czifile.imread(path)\n",
+    "    czi_img = czi_img[0,0,0,:,:,:,0]\n",
+    "    maximg = czi_img.max(axis = 0)\n",
     "    return maxz"
    ]
   },
@@ -348,9 +348,7 @@
    "metadata": {},
    "source": [
     "Again we will want do this for multiple images. \n",
-    "So how can you make the computer do it for you with little work on your end?\n",
-    "\n",
-    "Let's make another function to get calculate the threshold for images."
+    "So how can you hopefully cut this workload and make it faster."
    ]
   },
   {
@@ -359,6 +357,14 @@
    "metadata": {},
    "source": [
     "Calculating the threshold automatically using OTSU thresholding "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8874dfbc",
+   "metadata": {},
+   "source": [
+    "Let's make another function to get calculate the threshold for images."
    ]
   },
   {
@@ -380,35 +386,36 @@
     "    int\n",
     "    \n",
     "    '''\n",
-    "    czi_img = AICSImage(path)\n",
-    "    czi_array = czi_img.data\n",
-    "    czi_array = czi_array[0,0,:,:,:,]\n",
-    "    maximg = czi_array.max(axis = 0)\n",
+    "    czi_img = czifile.imread(path)\n",
+    "    czi_img = czi_img[0,0,0,:,:,:,0]\n",
+    "    maximg = czi_img.max(axis = 0)\n",
     "    thresh = filters.threshold_otsu(maximg)\n",
     "    return thresh \n",
     "   "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0d3c2fbd",
+   "cell_type": "markdown",
+   "id": "a4b0f590",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "no_injury_thresholds= []\n",
-    "for file in folder_path.iterdir():\n",
-    "    #either seperate RNAi files or add more conditions to seperate them for mean thresh calculation\n",
-    "    #change folder path to go to no injury and no injury RNAi seperately\n",
-    "    if 'NoInjury' in file.stem:\n",
-    "        #print(file)\n",
-    "        file = file.absolute()\n",
-    "        file = file.as_posix()\n",
-    "        threshold = calculate_threshold(file)\n",
-    "        no_injury_thresholds.append(threshold)\n",
-    "        mean = statistics.mean(no_injury)\n",
-    "    print(mean)\n",
-    "    "
+    "Make some calculations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fed0b7e2",
+   "metadata": {},
+   "source": [
+    "Now that we can calculate the threshold, that will automatically distinguish the background from 'true' values. We can now calculate multiple things about the images. \n",
+    "\n",
+    "Some of the most common and basic metrics calculated for fluorescent images are:\n",
+    "    Mean Fluorescent Value and \n",
+    "    Percent Area.\n",
+    "\n",
+    "Mean Fluorescent Value represents the mean fluorescent intensity of the image. Fluorescence often 'correlates' to expression of a gene or presence of a protein. \n",
+    "\n",
+    "Percent Area calculates how much of the selected region of interest (ROI) is fluorescent. "
    ]
   },
   {
@@ -418,7 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "z = '/Users/miramota/Desktop/IMGS/01142022_NoInjury9.czi'\n",
+    "z = 'https://hearingbrain.org/tmp/NoInjuryRNAi/01142022NijARNAi_NoInjury4.czi'\n",
     "czi_img = AICSImage(z)\n",
     "czi_array = czi_img.data\n",
     "czi_array = czi_array[0,0,:,:,:,]\n",
@@ -459,16 +466,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "90f297fc",
+   "metadata": {},
+   "source": [
+    "Now it is time to look at the data and parse it out.\n",
+    "\n",
+    "There are 4 groups to compare.\n",
+    "    No Injury \n",
+    "    Injury\n",
+    "    No Injury that has RNAi expression\n",
+    "    Injury that has RNAi expression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02ae3890",
+   "metadata": {},
+   "source": [
+    "If we look at the filenames\n",
+    "\n",
+    "'01142022_NoInjury2.czi'\n",
+    "'01142022_Injury3.czi'\n",
+    "'01142022NijARNAi_NoInjury1.czi'\n",
+    "'01142022NijARNAi_Injury1.czi'\n",
+    "\n",
+    "How can they be seperated by groups? "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "217e7b2c",
+   "id": "6a1b00cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_df = pd.DataFrame.from_dict({'Filename':[str(file.stem)], 'Filepath':[str(file)]})\n",
-    "df = pd.DataFrame.from_dict(metric, orient = 'columns')\n",
+    "noinjury = []\n",
+    "injury= []\n",
+    "noinjury_rnai= []\n",
+    "injury_rnai= [] \n",
+    "nornai_folder = []\n",
+    "rnais_folder = []\n",
     "\n",
-    "final_df = pd.concat([file_df, df], axis = 1)"
+    "for file in folder_path.rglob('*'):\n",
+    "    if file.suffix == '.czi':\n",
+    "        if 'RNAi' not in file.stem:\n",
+    "            nornai_folder.append(file)\n",
+    "        elif 'RNAi' in file.stem:\n",
+    "            rnais_folder.append(file)     \n",
+    "            \n",
+    "for x in nornai_folder: \n",
+    "    if 'NoInjury' in x.stem:\n",
+    "        noinjury.append(x)\n",
+    "    elif 'NoInjury' not in x.stem:\n",
+    "        injury.append(x)\n",
+    "for y in rnais_folder: \n",
+    "    if 'NoInjury' in y.stem:\n",
+    "        noinjury_rnai.append(y)\n",
+    "    elif 'NoInjury' not in y.stem: \n",
+    "        injury_rnai.append(y)"
    ]
   },
   {
@@ -491,8 +547,7 @@
     "    thresh=calculate_threshold(y)\n",
     "    NoIRNAi_thresh.append(thresh)\n",
     "    NoIRNAi_mean = statistics.mean(NoIRNAi_thresh)\n",
-    "    print(NOI_mean)\n",
-    "    "
+    "    print(NOI_mean)"
    ]
   },
   {
@@ -512,11 +567,11 @@
    "source": [
     "column_names = ['Filename','Mean Value', 'Percent Area']\n",
     "df = pd.DataFrame(columns= column_names)\n",
-    "for r in injury_rnai:\n",
-    "    filename = r.stem\n",
+    "for file in itertools.chain(noinjury, injury, noinjury_rnai, injury_rnai):\n",
+    "    filename = file.stem\n",
     "    #r = r.absolute()\n",
     "    #r = r.as_posix()\n",
-    "    max = get_max_proj(r)\n",
+    "    max = get_max_proj(file)\n",
     "    values = calculate_metrics(max,19) \n",
     "    res_dict= {'Filename':filename, 'Mean Value': values[0], 'Percent Area': values[1]}\n",
     "    df= df.append(res_dict, ignore_index=True)"
@@ -538,6 +593,7 @@
    "outputs": [],
    "source": [
     "#in each group add all the values of each conditon\n",
+    "\n",
     "Noinjury_means= (,)\n",
     "Injury_means= (,)\n",
     "Noinjury_rnai_means= (,)\n",
@@ -551,14 +607,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "626d9038",
+   "metadata": {},
+   "source": [
+    "Lets finally graph this"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40d958e7",
+   "id": "ae00a034",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#path = '~/Desktop/etc/etc/' \n",
-    "calculate_metrics(path)"
+    "Groups = ['Group1', 'Group2']\n",
+    "Mean_fluorescent_values = df.iloc[:,1]\n",
+    "\n",
+    "New_Colors = ['purple','deeppink']\n",
+    "plt.bar(Groups, Mean_fluorescent_values, color=New_Colors)\n",
+    "plt.title('Country Vs GDP Per Capita', fontsize=14)\n",
+    "plt.xlabel('Groups', fontsize=14)\n",
+    "plt.ylabel('Mean Fluorescent Values', fontsize=14)\n",
+    "plt.show()"
    ]
   }
  ],
