added exercises stuff

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -230,8 +230,43 @@
    "source": [
     "path = '01142022NijARNAi_NoInjury4.czi'\n",
     "img = czifile.imread(path)\n",
+    "\n",
+    "#What is the shape of the image\n",
+    "print(img.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3eeaf8cc-0801-415d-946d-73d5c32cfc3b",
+   "metadata": {},
+   "source": [
+    "Slice out the dimensions.\n",
+    "Need Z, Y, X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24959efa-0837-4d1f-b9dc-a484a30fd805",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#This is for them to do\n",
     "img = img[0,0,0,:,:,:,0]\n",
     "maximg = img.max(axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "536100a6-9cf4-44cc-aaf7-85cc0fdc7f61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Plot maximg \n",
+    "fig, ax = plt.subplots()\n",
+    "plt.imshow(maximg, cmap='gray')\n",
+    "plt.show()"
    ]
   },
   {
@@ -346,6 +381,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bfc5632c-d8bc-4b02-877b-98b12f149d18",
+   "metadata": {},
+   "source": [
+    "Plot this. \n",
+    "How does it compare to the max projection image?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "bba28d52",
@@ -365,6 +409,7 @@
     }
    ],
    "source": [
+    "#This is for them to do\n",
     "fig, ax = plt.subplots()\n",
     "plt.imshow(binary_mask, cmap='gray')\n",
     "plt.show()"
@@ -396,6 +441,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b9d464ae-8f10-495f-b179-c1b474031719",
+   "metadata": {},
+   "source": [
+    "Exercise 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1ae3082-ce52-45fe-95a9-f7f15efe33e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Making a function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f7788d9-02f2-498a-9188-9a3ae99a8635",
+   "metadata": {},
+   "source": [
+    "#tHEIR HINTs\n",
+    "\n",
+    "first read the image using czifile\n",
+    "slice out the dimensions you want\n",
+    "make a max projection image , using z dimension "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "32ddf087",
@@ -412,15 +487,24 @@
     "\n",
     "    Returns: \n",
     "    int\n",
-    "    \n",
     "    '''\n",
+    "#They write this \n",
     "    czi_img = czifile.imread(path)\n",
     "    czi_img = czi_img[0,0,0,:,:,:,0]\n",
     "    maximg = czi_img.max(axis = 0)\n",
     "    thresh = filters.threshold_otsu(maximg)\n",
+    "    #leave return thresh code for them\n",
     "    return thresh \n",
-    "   \n",
     "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eaacb13d-f96f-48c4-8677-09f44bbbeade",
+   "metadata": {},
+   "source": [
+    "Now lets run the function to make sure it works \n",
+    "what value did you get?"
    ]
   },
   {
@@ -438,7 +522,8 @@
     }
    ],
    "source": [
-    " x = calculate_threshold(path)\n",
+    "#They do this\n",
+    "x = calculate_threshold(path)\n",
     "print(x)"
    ]
   },
@@ -464,6 +549,14 @@
     "Mean Fluorescent Value represents the mean fluorescent intensity of the image. Fluorescence often 'correlates' to expression of a gene or presence of a protein. \n",
     "\n",
     "Percent Area calculates how much of the selected region of interest (ROI) is fluorescent. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf0dd1e1-a170-44fd-b617-08a9b6d73dff",
+   "metadata": {},
+   "source": [
+    "break down metrics one by one again (Tania)"
    ]
   },
   {
@@ -499,8 +592,7 @@
     "   count = np.sum(binary_mask)\n",
     "   percentarea = (count / area) * 100\n",
     "   metric = [mean_value, percentarea]\n",
-    "   return metric\n",
-    "\n"
+    "   return metric\n"
    ]
   },
   {
@@ -518,7 +610,7 @@
     }
    ],
    "source": [
-    "#Applying the function\n",
+    "#They do this applying the function\n",
     "\n",
     "calc = calculate_metrics(maximg, 38) \n",
     "print(calc)"
@@ -560,10 +652,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "noinjury = []\n",
-    "injury= []\n",
-    "noinjury_rnai= []\n",
-    "injury_rnai= [] \n",
     "nornai_folder = []\n",
     "rnais_folder = []\n",
     "\n",
@@ -575,18 +663,76 @@
     "        if 'RNAi' not in file.stem:\n",
     "            nornai_folder.append(file)\n",
     "        elif 'RNAi' in file.stem:\n",
-    "            rnais_folder.append(file)     \n",
-    "            \n",
+    "            rnais_folder.append(file)     \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4e3d495-175a-4048-ace7-175523f06ca9",
+   "metadata": {},
+   "source": [
+    "Look at what is inside your lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d584a272-68f7-461d-a0df-54586c022b04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(nornai_folder)\n",
+    "print(rnais_folder)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bebf03f6-07fb-498c-99b6-50d77d7b2fa8",
+   "metadata": {},
+   "source": [
+    "Exercise 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a41a8096-908e-4674-97ac-081909574194",
+   "metadata": {},
+   "source": [
+    "Make empty lists of the 4 different groups titled: \n",
+    "Go through the two different groups: nornais_folder and rnais_folder and seperate the no injury from the injury flies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5648370-433f-4c6f-a604-ebfda748c356",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "noinjury = []\n",
+    "injury= []\n",
+    "noinjury_rnai= []\n",
+    "injury_rnai= [] \n",
+    "\n",
     "for x in nornai_folder: \n",
     "    if 'NoInjury' in x.stem:\n",
     "        noinjury.append(x)\n",
     "    elif 'NoInjury' not in x.stem:\n",
     "        injury.append(x)\n",
+    "        \n",
     "for y in rnais_folder: \n",
     "    if 'NoInjury' in y.stem:\n",
     "        noinjury_rnai.append(y)\n",
     "    elif 'NoInjury' not in y.stem: \n",
     "        injury_rnai.append(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d273a9f8-7a45-4180-920c-143276f1fef1",
+   "metadata": {},
+   "source": [
+    "Make sure the correct groups are in each list"
    ]
   },
   {
@@ -605,8 +751,19 @@
     }
    ],
    "source": [
+    "#They do this\n",
+    "print(noinjury)\n",
     "print(injury)\n",
-    "print(noinjury_rnai)"
+    "print(noinjury_rnai)\n",
+    "print(injury_rnai)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18852df7-a02f-4614-9fb2-8323c9a51d2c",
+   "metadata": {},
+   "source": [
+    "Explain why we only look at non injury (cole)"
    ]
   },
   {
@@ -625,13 +782,16 @@
    ],
    "source": [
     "#1st, find mean threshold for NOI and NOI RNAi using calculate threshold function\n",
-    "#NoI_thresh=[]\n",
+    "NoI_thresh=[]\n",
     "NoIRNAi_thresh=[]\n",
-    "#for x in noinjury(): \n",
-    "    #thresh=calculate_threshold(x) \n",
-    "    #NoI_thresh.append(thresh)\n",
-    "    #NoI_mean = statistics.mean(NoI_thresh)\n",
-    "    #print(NoI_mean)\n",
+    "\n",
+    "for x in noinjury(): \n",
+    "    x= y.absolute()\n",
+    "    x= y.as_posix()\n",
+    "    thresh=calculate_threshold(x) \n",
+    "    NoI_thresh.append(thresh)\n",
+    "    NoI_mean = statistics.mean(NoI_thresh)\n",
+    "    print(NoI_mean)\n",
     "    \n",
     "for y in noinjury_rnai:\n",
     "    y= y.absolute()\n",
@@ -639,7 +799,28 @@
     "    thresh=calculate_threshold(y)\n",
     "    NoIRNAi_thresh.append(thresh)\n",
     "    NoIRNAi_mean = statistics.mean(NoIRNAi_thresh)\n",
-    "    print(NoIRNAi_mean)"
+    "    print(NoIRNAi_mean)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c54625c-a07d-457c-b8f1-ef2d5c012106",
+   "metadata": {},
+   "source": [
+    "Save these values into a variable that you will apply later to all of the images again"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03b7a85a-8d9a-40df-bcb9-b10e33896c58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#They do this\n",
+    "NoI_thresh_value=\n",
+    "NoIRNAi_thresh_value ="
    ]
   },
   {
@@ -653,6 +834,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "710808fd-04c7-4349-a4db-f36971b19fc5",
+   "metadata": {},
+   "source": [
+    "First we need to create an empty DataFrame to store our values "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "id": "600ef1cf-9a36-47c9-b00b-d780ef6e599f",
@@ -661,12 +850,44 @@
    "source": [
     "column_names = ['Filename','Mean Value', 'Percent Area']\n",
     "df = pd.DataFrame(columns= column_names)\n",
-    "for file in itertools.chain(noinjury, injury, noinjury_rnai, injury_rnai):\n",
+    "\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4424f5d7-b5a0-4d43-938f-eab720ff2faa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for file in itertools.chain(noinjury, injury):\n",
     "    filename = file.stem\n",
     "    #r = r.absolute()\n",
     "    #r = r.as_posix()\n",
+    "    #Have them run the functions\n",
     "    max = get_max_proj(file)\n",
     "    values = calculate_metrics(max,19) \n",
+    "    \n",
+    "    res_dict= {'Filename':filename, 'Mean Value': values[0], 'Percent Area': values[1]}\n",
+    "    df= df.append(res_dict, ignore_index=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13ce2073-5a6f-4083-bd7b-2cd1fb121eb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for file in itertools.chain(noinjury_rnai, injury_rnai):\n",
+    "    filename = file.stem\n",
+    "    #r = r.absolute()\n",
+    "    #r = r.as_posix()\n",
+    "    #Have them run the functions\n",
+    "    max = get_max_proj(file)\n",
+    "    values = calculate_metrics(max,19) \n",
+    "    \n",
     "    res_dict= {'Filename':filename, 'Mean Value': values[0], 'Percent Area': values[1]}\n",
     "    df= df.append(res_dict, ignore_index=True)"
    ]
@@ -795,7 +1016,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
